# site-watchdog

./: README.md  pyproject.toml  swatch-config-example.json
site_watchdog/: main.py
